--- a/index.html
+++ b/index.html
@@ -10,15 +10,29 @@
 <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@600&display=swap" rel="stylesheet"> -->
 </head>
 <body>
-    <header id="id1">
+    <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="color-r">r</span>y</h3>
+            <h3 class="nav-title">Welll<span class="color-r">come</span></h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button class="HireBtn">Hire Me</button></li>
+                <li><button class="button-primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div>
+                <h3 class="banner-greeting">Hi,  I am</h3>
+                <h1 class="banner-title">Abdullah Al Musafir</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam quasi saepe modi sed, molestias veritatis nam? Sapiente, iusto. Asperiores, aliquam iusto magnam, praesentium ducimus officia velit consequuntur corporis tempora unde maxime dolore neque nihil vitae.</p>
+                <button class="button-primary">Download CV</button>
+                <button class="button-primary">
+                    Contact
+                </button>
+            </div>
+            <img class="mypic" src="/lastpic_prev_ui.png" alt="">
+        </div>
+
     </header>
     <main>
 
