--- a/index.html
+++ b/index.html
@@ -35,7 +35,30 @@
 
     </header>
     <main>
-
+        <!-- This is about section -->
+        <section class="about">
+            <h2 class="section-h2">About ME</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus delectus reprehenderit repellendus aspernatur vero debitis at, nisi accusantium, odit, beatae obcaecati? Eaque perspiciatis tenetur doloremque laboriosam id voluptatum, dolore, a velit, temporibus voluptatibus eligendi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, ipsa nesciunt! Exercitationem, neque nemo tempora voluptate non atque deserunt doloremque laboriosam excepturi itaque tenetur dolor ducimus libero eos quis harum velit sunt eaque deleniti voluptatibus facere. Fuga dicta id debitis dignissimos necessitatibus nesciunt ipsum iusto commodi eligendi, ex, animi omnis nemo blanditiis facere assumenda.</p>
+            <div class="about-info-container">
+                <!-- .about-info*4>h4.info-title.+p.info-description -->
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Abdullah Al Musafir</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">abdullahalmusafir069@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-description">13 September 2003</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From</h4>
+                    <p class="info-description">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
